--- a/19th-oct-2023.html
+++ b/19th-oct-2023.html
@@ -8,8 +8,8 @@
 	<meta name="robots" content="index, follow">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?6393">
-	<link rel="stylesheet" type="text/css" href="style.css?1685">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?1820">
+	<link rel="stylesheet" type="text/css" href="style.css?986">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,300&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <title>19th Oct 2023</title>
@@ -32,7 +32,7 @@
 <div class="page-container">
     
 <!-- bloc-0 -->
-<div class="bloc none l-bloc " id="bloc-0">
+<div class="bloc none l-bloc" id="bloc-0">
 	<div class="container bloc-sm bloc-no-padding-lg">
 		<div class="row">
 			<div class="col">
@@ -46,54 +46,66 @@
 							<div class="collapse navbar-collapse navbar-32798">
 								<ul class="site-navigation nav navbar-nav ml-auto">
 									<li class="nav-item">
-										<a href="index.html" class="nav-link  ltc-black">Home</a>
+										<a href="index.html" class="nav-link">Home</a>
 									</li>
 									<li class="nav-item">
-										<a href="about.html" class="nav-link  ltc-black">About</a>
+										<a href="about.html" class="nav-link">About</a>
 									</li>
 									<li class="nav-item">
 										<div class="dropdown btn-dropdown">
-											<a href="#" class="dropdown-toggle nav-link  ltc-black" data-toggle="dropdown" aria-expanded="false">Events</a>
+											<a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false">Events</a>
 											<ul class="dropdown-menu" role="menu">
 												<li class="nav-item">
-													<a href="5th-oct-2023.html" class="nav-link  ltc-black">5th Oct 2023</a>
+													<a href="5th-oct-2023.html" class="nav-link">5th Oct 2023</a>
 												</li>
 												<li class="nav-item">
-													<a href="19th-oct-2023.html" class="nav-link  ltc-black">19th Oct 2023</a>
+													<a href="19th-oct-2023.html" class="nav-link">19th Oct 2023</a>
+												</li>
+												<li class="nav-item">
+													<a href="2nd-nov-2023.html" class="nav-link">2nd Nov 2023</a>
+												</li>
+												<li class="nav-item">
+													<a href="16th-nov-2023.html" class="nav-link">16th Nov 2023</a>
+												</li>
+												<li class="nav-item">
+													<a href="30th-nov-2023.html" class="nav-link">30th Nov 2023</a>
+												</li>
+												<li class="nav-item">
+													<a href="7th-dec-2023.html" class="nav-link">7th Dec 2023</a>
 												</li>
 											</ul>
 										</div>
 									</li>
 									<li class="nav-item">
 										<div class="dropdown btn-dropdown">
-											<a href="#" class="dropdown-toggle nav-link  ltc-black" data-toggle="dropdown" aria-expanded="false">Archive</a>
+											<a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false">Archive</a>
 											<ul class="dropdown-menu" role="menu">
 												<li class="nav-item">
-													<a href="2022-23.html" class="nav-link  ltc-black">2022-23</a>
+													<a href="2022-23.html" class="nav-link">2022-23</a>
 												</li>
 												<li class="nav-item">
-													<a href="spring-2022.html" class="nav-link  ltc-black">Spring 2022</a>
+													<a href="spring-2022.html" class="nav-link">Spring 2022</a>
 												</li>
 												<li class="nav-item">
-													<a href="spring-2020.html" class="nav-link  ltc-black">Spring 2020</a>
+													<a href="spring-2020.html" class="nav-link">Spring 2020</a>
 												</li>
 												<li class="nav-item">
-													<a href="spring-2019.html" class="nav-link  ltc-black">Spring 2019</a>
+													<a href="spring-2019.html" class="nav-link">Spring 2019</a>
 												</li>
 												<li class="nav-item">
-													<a href="spring-2018.html" class="nav-link  ltc-black">Spring 2018</a>
+													<a href="spring-2018.html" class="nav-link">Spring 2018</a>
 												</li>
 												<li class="nav-item">
-													<a href="spring-2017.html" class="nav-link  ltc-black">Spring 2017</a>
+													<a href="spring-2017.html" class="nav-link">Spring 2017</a>
 												</li>
 											</ul>
 										</div>
 									</li>
 									<li class="nav-item">
-										<a href="podcast.html" class="nav-link  ltc-black">Podcast</a>
+										<a href="podcast.html" class="nav-link">Podcast</a>
 									</li>
 									<li class="nav-item">
-										<a href="contact.html" class="nav-link  ltc-black">Contact</a>
+										<a href="contact.html" class="nav-link">Contact</a>
 									</li>
 								</ul>
 							</div>
@@ -170,7 +182,7 @@
 					<div class="card-header">
 						<h3 class="mg-clear">
 							Anna Werno
-						</h3><img src="img/lazyload-ph.png" data-src="img/anna_code_bar.jpeg" class="img-fluid mx-auto d-block lazyload" alt="ryan" />
+						</h3><img src="img/lazyload-ph.png" data-src="img/anna_code_bar.jpeg" class="img-fluid mx-auto d-block lazyload" alt="Anna" />
 					</div>
 					<div class="card-body">
 						<p class="p-102-style text-left">
@@ -236,9 +248,9 @@
 
 
 <!-- Additional JS -->
-<script src="./js/jquery.min.js?8730"></script>
-<script src="./js/bootstrap.bundle.min.js?6372"></script>
-<script src="./js/blocs.min.js?663"></script>
+<script src="./js/jquery.min.js?7845"></script>
+<script src="./js/bootstrap.bundle.min.js?2363"></script>
+<script src="./js/blocs.min.js?8265"></script>
 <script src="./js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
 
