--- a/2nd-nov-2023.html
+++ b/2nd-nov-2023.html
@@ -8,8 +8,8 @@
 	<meta name="robots" content="index, follow">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?5647">
-	<link rel="stylesheet" type="text/css" href="style.css?2738">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?8172">
+	<link rel="stylesheet" type="text/css" href="style.css?2103">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,300&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <title>19th-Oct-2023-1</title>
@@ -63,6 +63,15 @@
 												</li>
 												<li class="nav-item">
 													<a href="2nd-nov-2023.html" class="nav-link">2nd Nov 2023</a>
+												</li>
+												<li class="nav-item">
+													<a href="16th-nov-2023.html" class="nav-link">16th Nov 2023</a>
+												</li>
+												<li class="nav-item">
+													<a href="30th-nov-2023.html" class="nav-link">30th Nov 2023</a>
+												</li>
+												<li class="nav-item">
+													<a href="7th-dec-2023.html" class="nav-link">7th Dec 2023</a>
 												</li>
 											</ul>
 										</div>
@@ -122,7 +131,7 @@
 <!-- bloc-1 END -->
 
 <!-- bloc-32 -->
-<div class="bloc tc-black-2 " id="bloc-32">
+<div class="bloc tc-black-2" id="bloc-32">
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col text-md-left text-center">
@@ -236,9 +245,9 @@
 
 
 <!-- Additional JS -->
-<script src="./js/jquery.min.js?5182"></script>
-<script src="./js/bootstrap.bundle.min.js?2204"></script>
-<script src="./js/blocs.min.js?6373"></script>
+<script src="./js/jquery.min.js?7845"></script>
+<script src="./js/bootstrap.bundle.min.js?2363"></script>
+<script src="./js/blocs.min.js?8265"></script>
 <script src="./js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
 
