--- a/7th-dec-2023.html
+++ b/7th-dec-2023.html
@@ -8,8 +8,8 @@
 	<meta name="robots" content="index, follow">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?9031">
-	<link rel="stylesheet" type="text/css" href="style.css?7852">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?2353">
+	<link rel="stylesheet" type="text/css" href="style.css?7949">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,300&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <title>30th-Nov-2023-1</title>
@@ -44,7 +44,7 @@
 								<span class="navbar-toggler-icon"></span>
 							</button>
 							<div class="collapse navbar-collapse navbar-32798">
-								<ul class="site-navigation nav navbar-nav ml-auto ">
+								<ul class="site-navigation nav navbar-nav ml-auto">
 									<li class="nav-item">
 										<a href="index.html" class="nav-link">Home</a>
 									</li>
@@ -138,8 +138,10 @@
 				<h1 class="tc-black-2 mg-md">
 					Thursday 7th December 2023 17:00-18:00<br>Palmerston Lecture Theatre<br>
 				</h1>
+				<p class="p-31049-style mg-clear ">
+					This week we be hosting a discussion panel on work experience, internships while studying and getting your first job after graduation.<br><br>This is the last Happy Hour of the 2023, check out oure events for Semester 2 in 2024,<br><br><a href="https://github.com/martinsolent/solent_store/raw/main/docs/east-park-terrace-campus-map.pdf">Download Campus Map for Room Location</a>
+				</p>
 				<p class="p-31049-style mg-clear">
-					This week we be hosting a discussion panel on work experience while studeying and getting your first job after graduation.<br><br><a href="https://github.com/martinsolent/solent_store/raw/main/docs/east-park-terrace-campus-map.pdf">Download Campus Map for Room Location</a>
 				</p>
 			</div>
 		</div>
@@ -225,9 +227,9 @@
 
 
 <!-- Additional JS -->
-<script src="./js/jquery.min.js?8019"></script>
-<script src="./js/bootstrap.bundle.min.js?740"></script>
-<script src="./js/blocs.min.js?3968"></script>
+<script src="./js/jquery.min.js?7845"></script>
+<script src="./js/bootstrap.bundle.min.js?2363"></script>
+<script src="./js/blocs.min.js?8265"></script>
 <script src="./js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
 
