--- a/about.html
+++ b/about.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?9550">
-	<link rel="stylesheet" type="text/css" href="style.css?3640">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?84">
+	<link rel="stylesheet" type="text/css" href="style.css?5840">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,300&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <title>About</title>
@@ -55,16 +55,22 @@
 											<a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false">Events</a>
 											<ul class="dropdown-menu" role="menu">
 												<li class="nav-item">
-													<a href="index.html" class="a-btn nav-link">New Link</a>
-												</li>
-												<li class="nav-item">
-													<a href="16th-nov-2023.html" class="nav-link a-btn">16th Nov 2023</a>
+													<a href="5th-oct-2023.html" class="nav-link">5th Oct 2023</a>
 												</li>
 												<li class="nav-item">
 													<a href="19th-oct-2023.html" class="nav-link">19th Oct 2023</a>
 												</li>
 												<li class="nav-item">
 													<a href="2nd-nov-2023.html" class="nav-link">2nd Nov 2023</a>
+												</li>
+												<li class="nav-item">
+													<a href="16th-nov-2023.html" class="nav-link">16th Nov 2023</a>
+												</li>
+												<li class="nav-item">
+													<a href="30th-nov-2023.html" class="nav-link">30th Nov 2023</a>
+												</li>
+												<li class="nav-item">
+													<a href="7th-dec-2023.html" class="nav-link">7th Dec 2023</a>
 												</li>
 											</ul>
 										</div>
@@ -134,7 +140,7 @@
 				<p class="p-style">
 					<a href="https://www.solent.ac.uk/">Solent University</a> Computing Subject Group's Happy Hour Talks offer insights to working within the digital and tech industry by bringing in practitioners, including Solent Alumni, to share their professional journeys. <br>
 				</p><img src="img/lazyload-ph.png" data-src="img/HAPPY_HOUR_MARCH_2022_WEB.jpg" class="img-fluid mx-auto d-block mg-md lazyload" alt="HAPPY_HOUR_MARCH_2022_WEB" />
-				<p class="p-style ">
+				<p class="p-style">
 					<br>Happy Hour talks take place on <strong>Thursdays 5pm - 6.15pm</strong> (university term time only) in <a href="https://goo.gl/maps/6o2VapppYKDaxSym7">Spark Building</a>, Solent University, East Park Terrace, Southampton, S014 0YN. <br><br>Happy Hour Talk Sessions last 1 to 1.5 hours although we will aim to wrap up by 6.15pm. Some weeks there will be more than one speaker/activity&nbsp;<br><br>For more details or if work in the digital/tech industry and would like to do a talk, please contact martin.reid@solent.ac.uk<br>and follow us on Twitter <a href="https://twitter.com/WebDevSolent">@WebDevSolent</a><br><br><br><a href="https://github.com/martinsolent/solent_store/raw/main/docs/east-park-terrace-campus-map.pdf">Download Campus Map</a><br>
 				</p>
 			</div>
@@ -210,9 +216,9 @@
 
 
 <!-- Additional JS -->
-<script src="./js/jquery.min.js?5072"></script>
-<script src="./js/bootstrap.bundle.min.js?866"></script>
-<script src="./js/blocs.min.js?2709"></script>
+<script src="./js/jquery.min.js?7845"></script>
+<script src="./js/bootstrap.bundle.min.js?2363"></script>
+<script src="./js/blocs.min.js?8265"></script>
 <script src="./js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
 
