--- a/30th-nov-2023.html
+++ b/30th-nov-2023.html
@@ -8,8 +8,8 @@
 	<meta name="robots" content="index, follow">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?4867">
-	<link rel="stylesheet" type="text/css" href="style.css?7265">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?5183">
+	<link rel="stylesheet" type="text/css" href="style.css?923">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,300&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <title>16th-Nov-2023-1</title>
@@ -56,16 +56,22 @@
 											<a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false">Events</a>
 											<ul class="dropdown-menu" role="menu">
 												<li class="nav-item">
-													<a href="index.html" class="a-btn nav-link">New Link</a>
-												</li>
-												<li class="nav-item">
-													<a href="16th-nov-2023.html" class="nav-link a-btn">16th Nov 2023</a>
+													<a href="5th-oct-2023.html" class="nav-link">5th Oct 2023</a>
 												</li>
 												<li class="nav-item">
 													<a href="19th-oct-2023.html" class="nav-link">19th Oct 2023</a>
 												</li>
 												<li class="nav-item">
 													<a href="2nd-nov-2023.html" class="nav-link">2nd Nov 2023</a>
+												</li>
+												<li class="nav-item">
+													<a href="16th-nov-2023.html" class="nav-link">16th Nov 2023</a>
+												</li>
+												<li class="nav-item">
+													<a href="30th-nov-2023.html" class="nav-link">30th Nov 2023</a>
+												</li>
+												<li class="nav-item">
+													<a href="7th-dec-2023.html" class="nav-link">7th Dec 2023</a>
 												</li>
 											</ul>
 										</div>
@@ -144,7 +150,7 @@
 <!-- bloc-32 -->
 <div class="bloc tc-black none" id="bloc-32">
 	<div class="container bloc-no-padding-lg bloc-no-padding">
-		<div class="row voffset ">
+		<div class="row voffset">
 			<div class="col text-md-left text-center">
 				<div class="card">
 					<div class="card-header">
@@ -216,9 +222,9 @@
 
 
 <!-- Additional JS -->
-<script src="./js/jquery.min.js?3224"></script>
-<script src="./js/bootstrap.bundle.min.js?9548"></script>
-<script src="./js/blocs.min.js?5124"></script>
+<script src="./js/jquery.min.js?7845"></script>
+<script src="./js/bootstrap.bundle.min.js?2363"></script>
+<script src="./js/blocs.min.js?8265"></script>
 <script src="./js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
 
