--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?4780">
-	<link rel="stylesheet" type="text/css" href="style.css?1901">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?3309">
+	<link rel="stylesheet" type="text/css" href="style.css?4082">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,300&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <title>Home</title>
@@ -43,7 +43,7 @@
 								<span class="navbar-toggler-icon"></span>
 							</button>
 							<div class="collapse navbar-collapse navbar-32798">
-								<ul class="site-navigation nav navbar-nav ml-auto ">
+								<ul class="site-navigation nav navbar-nav ml-auto">
 									<li class="nav-item">
 										<a href="index.html" class="nav-link">Home</a>
 									</li>
@@ -201,7 +201,7 @@
 					<div class="card-body">
 						<p class="text-lg-center text-center p-1-style">
 							<strong>Panel Discussion</strong><br>Work Experience.&nbsp;<br>Placements &amp; First Jobs<br><strong>7/12/2023&nbsp;</strong><br>
-						</p><a href="#" class="btn btn-block btn-ferrari-red">More Details</a>
+						</p><a href="7th-dec-2023.html" class="btn btn-block btn-ferrari-red ">More Details</a>
 					</div>
 				</div>
 			</div>
@@ -274,9 +274,9 @@
 
 
 <!-- Additional JS -->
-<script src="./js/jquery.min.js?8019"></script>
-<script src="./js/bootstrap.bundle.min.js?740"></script>
-<script src="./js/blocs.min.js?3968"></script>
+<script src="./js/jquery.min.js?383"></script>
+<script src="./js/bootstrap.bundle.min.js?8297"></script>
+<script src="./js/blocs.min.js?8449"></script>
 <script src="./js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
 
