added images to about page

--- a/about.html
+++ b/about.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?84">
-	<link rel="stylesheet" type="text/css" href="style.css?5840">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?9213">
+	<link rel="stylesheet" type="text/css" href="style.css?3348">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,300&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <title>About</title>
@@ -130,16 +130,17 @@
 <!-- bloc-1 END -->
 
 <!-- bloc-3 -->
-<div class="bloc tc-black l-bloc" id="bloc-3">
+<div class="bloc tc-black l-bloc " id="bloc-3">
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="offset-lg-2 col-lg-8">
+				<span id="drop-zone" class="top-zone"></span>
 				<h1 class="mg-md">
 					About
 				</h1>
 				<p class="p-style">
 					<a href="https://www.solent.ac.uk/">Solent University</a> Computing Subject Group's Happy Hour Talks offer insights to working within the digital and tech industry by bringing in practitioners, including Solent Alumni, to share their professional journeys. <br>
-				</p><img src="img/lazyload-ph.png" data-src="img/HAPPY_HOUR_MARCH_2022_WEB.jpg" class="img-fluid mx-auto d-block mg-md lazyload" alt="HAPPY_HOUR_MARCH_2022_WEB" />
+				</p><img src="img/lazyload-ph.png" data-src="img/HAPPY_HOUR_MARCH_2022_WEB.jpg" class="img-fluid mx-auto d-block mg-md lazyload" alt="HAPPY_HOUR_MARCH_2022_WEB" /><img src="img/lazyload-ph.png" data-src="img/PXL_20231005_161147459.jpg" class="img-fluid mx-auto d-block mg-md lazyload" alt="PXL_20231005_161147459" /><img src="img/lazyload-ph.png" data-src="img/PXL_20231005_161209344.MP.jpg" class="img-fluid mx-auto d-block mg-md lazyload" alt="PXL_20231005_161209344.MP" />
 				<p class="p-style">
 					<br>Happy Hour talks take place on <strong>Thursdays 5pm - 6.15pm</strong> (university term time only) in <a href="https://goo.gl/maps/6o2VapppYKDaxSym7">Spark Building</a>, Solent University, East Park Terrace, Southampton, S014 0YN. <br><br>Happy Hour Talk Sessions last 1 to 1.5 hours although we will aim to wrap up by 6.15pm. Some weeks there will be more than one speaker/activity&nbsp;<br><br>For more details or if work in the digital/tech industry and would like to do a talk, please contact martin.reid@solent.ac.uk<br>and follow us on Twitter <a href="https://twitter.com/WebDevSolent">@WebDevSolent</a><br><br><br><a href="https://github.com/martinsolent/solent_store/raw/main/docs/east-park-terrace-campus-map.pdf">Download Campus Map</a><br>
 				</p>
@@ -216,9 +217,9 @@
 
 
 <!-- Additional JS -->
-<script src="./js/jquery.min.js?7845"></script>
-<script src="./js/bootstrap.bundle.min.js?2363"></script>
-<script src="./js/blocs.min.js?8265"></script>
+<script src="./js/jquery.min.js?3556"></script>
+<script src="./js/bootstrap.bundle.min.js?4740"></script>
+<script src="./js/blocs.min.js?5393"></script>
 <script src="./js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
 
