--- a/15th-feb-2024.html
+++ b/15th-feb-2024.html
@@ -2,16 +2,17 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <meta name="keywords" content="digital industry talks">
+    <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+	<meta name="robots" content="index, follow">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?26">
-	<link rel="stylesheet" type="text/css" href="style.css?5978">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?6804">
+	<link rel="stylesheet" type="text/css" href="style.css?8387">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,300&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
-    <title>Home</title>
+    <title>30th-Nov-2023-1</title>
 
 
     
@@ -135,106 +136,43 @@
 </div>
 <!-- bloc-1 END -->
 
-<!-- bloc-2 -->
-<div class="bloc tc-black l-bloc" id="bloc-2">
-	<div class="container bloc-lg">
+<!-- bloc-32 -->
+<div class="bloc tc-black-2" id="bloc-32">
+	<div class="container bloc-lg bloc-md-lg">
 		<div class="row">
-			<div class="col">
-				<h1 class="mg-md h3-style h1-style">
-					Happy Hour 2023-24
+			<div class="col text-md-left text-center">
+				<h1 class="tc-black-2 mg-md text-lg-center h1-bloc-32-style">
+					Nick Thorne – Director at Rockstone Data<br>
 				</h1>
-				<p class="p-1-bloc-2-style mg-lg">
-					Happy Hour Digital Industry Talks are designed to offer an insight into working in the tech and digital industries.&nbsp;Talks are mostly focused on students, &nbsp;"early career" or how to get into the industry with speakers presenting their journey into the industry and professional practice.<br><br>We are running Happy Hour Talks every other week in the first two semesters starting on 5th October 2023<br><br>
-				</p><img src="img/lazyload-ph.png" data-src="img/HAPPY_HOUR_NOV_2022_WEB.jpg" class="img-fluid mx-auto d-block lazyload" alt="HAPPY_HOUR_NOV_2022_WEB" />
+				<h2 class="mg-md text-lg-center">
+					Thursday 15th February 2024 17:00-18:00 – Spark Building TS202.
+				</h2>
 			</div>
 		</div>
-		<div class="row voffset-lg">
-			<div class="align-self-center col-lg-3 col-md-6">
+	</div>
+</div>
+<!-- bloc-32 END -->
+
+<!-- bloc-32 -->
+<div class="bloc tc-black none" id="bloc-32">
+	<div class="container bloc-no-padding-lg bloc-no-padding">
+		<div class="row voffset">
+			<div class="col text-md-left text-center">
 				<div class="card">
-					<img src="img/lazyload-ph.png" data-src="img/354441808_10168317563430294_2330253690648159454_n.jpg" class="img-fluid mx-auto d-block lazyload" alt="Screenshot%202022 10-30%20at%2014.23.54" />
-					<div class="card-body">
-						<p class="text-lg-center text-center p-1-style">
-							<strong>Juniper Networks</strong><br>Placements, Getting Your <br>First Job &amp; Working in Tech<br><strong>5/10/2023</strong>
-						</p><a href="5th-oct-2023.html" class="btn btn-block btn-ferrari-red">More Details</a>
+					<div class="card-header">
+						<img src="img/lazyload-ph.png" data-src="img/nick_h.jpeg" class="img-fluid mx-auto d-block lazyload" alt="Luke" />
 					</div>
-				</div>
-			</div>
-			<div class="mt-3 col-lg-3 col-md-6 mt-md-0 align-self-center">
-				<div class="card">
-					<img src="img/lazyload-ph.png" data-src="img/HH_Oct_19_2023.png" class="img-fluid mx-auto lazyload" alt="place_holder_face_2" />
 					<div class="card-body">
-						<p class="text-lg-center text-center p-bloc-2-style">
-							Ryan Gaudion &amp;&nbsp;Anna Werno<br />Side Projects<br>&amp; sharing your skills<br><strong>19/10/2023</strong><br>
-						</p><a href="19th-oct-2023.html" class="btn btn-block btn-ferrari-red">More Details</a>
-					</div>
-				</div>
-			</div>
-			<div class="mt-3 col-lg-3 align-self-center col-md-6 mt-lg-0">
-				<div class="card">
-					<img src="img/lazyload-ph.png" data-src="img/adam_don_2-11-23.jpg" class="img-fluid mx-auto d-block lazyload" alt="Adam &amp; Dom" />
-					<div class="card-body">
-						<p class="text-lg-center text-center p-3-style">
-							Adam Chu &amp;&nbsp;Dominik Romanek <br>Getting your first job<br><strong>2/11/2023</strong><br>
-						</p><a href="2nd-nov-2023.html" class="btn btn-style btn-ferrari-red btn-block">More Details</a>
-					</div>
-				</div>
-			</div>
-			<div class="mt-3 col-lg-3 align-self-center col-md-6 mt-lg-0">
-				<div class="card d-block">
-					<img src="img/lazyload-ph.png" data-src="img/1686848012768.jpeg" class="img-fluid mx-auto d-block lazyload" alt="place_holder_face_2" />
-					<div class="card-body">
-						<p class="text-lg-center text-center p-4-style">
-							<strong>Luke Searle</strong><br>Learning Designer at University of Southampton<br><strong>16/11/2023</strong><br>
-						</p><a href="16th-nov-2023.html" class="btn btn-block btn-ferrari-red">More Details</a>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="row voffset-md">
-			<div class="col-lg-3 col-md-6 align-self-center">
-				<div class="card">
-					<img src="img/lazyload-ph.png" data-src="img/1540546768920.jpeg" class="img-fluid mx-auto d-block lazyload" alt="place_holder_face_2" />
-					<div class="card-body">
-						<p class="text-lg-center text-center p-1-style">
-							<strong>James Whale</strong><br>Site Reliability Engineer <br>at Cisco<br><strong>30/11/2023</strong><br>
-						</p><a href="30th-nov-2023.html" class="btn btn-block btn-ferrari-red">More Details</a>
-					</div>
-				</div>
-			</div>
-			<div class="col-lg-3 col-md-6 align-self-center">
-				<div class="card">
-					<img src="img/lazyload-ph.png" data-src="img/HH_7_DEC_2023%20copy.jpg" class="img-fluid mx-auto d-block lazyload" alt="panel  7/12/23" />
-					<div class="card-body">
-						<p class="text-lg-center text-center p-1-style">
-							<strong>Panel Discussion</strong><br>Work Experience.&nbsp;<br>Placements &amp; First Jobs<br><strong>7/12/2023&nbsp;</strong><br>
-						</p><a href="7th-dec-2023.html" class="btn btn-block btn-ferrari-red">More Details</a>
-					</div>
-				</div>
-			</div>
-			<div class="col-lg-3 col-md-6 align-self-center">
-				<div class="card">
-					<img src="img/lazyload-ph.png" data-src="img/ross_chapman.jpeg" class="img-fluid mx-auto d-block lazyload" alt="Ross Chapman" />
-					<div class="card-body">
-						<p class="text-lg-center text-center p-1-style">
-							<strong>Ross Chapman</strong><br>Product Strategist &amp; Consultant<br><strong>1/2/2024&nbsp;</strong><br>
-						</p><a href="1st-feb-202.html" class="btn btn-block btn-ferrari-red">More Details</a>
-					</div>
-				</div>
-			</div>
-			<div class="col-lg-3 col-md-6 align-self-center">
-				<div class="card">
-					<img src="img/lazyload-ph.png" data-src="img/nick_h.jpeg" class="img-fluid mx-auto d-block lazyload" alt="Nick Thorne" />
-					<div class="card-body">
-						<p class="text-lg-center text-center p-1-style">
-							<strong>Nick Thorne<br></strong>Software Engineer<br>Director at Rockstone Data&nbsp;<br><strong>15/2/2024&nbsp;</strong><br>
-						</p><a href="15th-feb-2024.html" class="btn btn-block btn-ferrari-red">More Details</a>
+						<p class="p-102-style text-left">
+							<a href="http://www.linkedin.com/in/nickthorne/">Nick</a> is <a href="http://www.rockstonedata.co.uk/">Director at Rockstone Data Ltd</a>, a company that provides cloud native app development and business consultancy services for various clients and sectors. He has over 14 years of experience in software development and project management, as well as an MSc in Renewable Energy Systems Technology, and multiple patents and publications in the field of digital technology.<br><br>He specialises in delivering successful projects using Python, Docker, Django, Plotly Dash, postgres, ClickhouseDB, GoLang, GitHub, and AWS, as well as native apps for Android and iOS. Some of Nick&rsquo;s recent achievements include developing and maintaining a remote condition monitoring system for a regional rail operator, a data pipeline for a healthcare startup, and a video WebRTC app for a GP education platform. He has also contributed to a new open-source release for a non-profit organization that uses mobile network data for humanitarian purposes. He enjoys working with cutting-edge technologies, solving complex problems, and creating innovative solutions that make a positive impact. <br><br><a href="http://www.linkedin.com/in/nickthorne/">www.linkedin.com/in/nickthorne/</a><br><a href="http://www.rockstonedata.co.uk/">www.rockstonedata.co.uk/</a><br><br><br><br>
+						</p>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
 </div>
-<!-- bloc-2 END -->
+<!-- bloc-32 END -->
 
 <!-- ScrollToTop Button -->
 <a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1',this)"><svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 32 32"><path class="scroll-to-top-btn-icon" d="M30,22.656l-14-13-14,13"/></svg></a>
