upload menu fix

--- a/1st-feb-2024.html
+++ b/1st-feb-2024.html
@@ -8,11 +8,11 @@
 	<meta name="robots" content="index, follow">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?6978">
-	<link rel="stylesheet" type="text/css" href="style.css?2626">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?3925">
+	<link rel="stylesheet" type="text/css" href="style.css?6679">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,300&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
-    <title>30th-Nov-2023-1</title>
+    <title>15th-Feb-2024-1</title>
 
 
     
@@ -98,10 +98,10 @@
 		<div class="row">
 			<div class="col text-md-left text-center">
 				<h1 class="tc-black-2 mg-md text-lg-center h1-bloc-32-style">
-					Nick Thorne – Director at Rockstone Data<br>
+					Ross Chapman - Product Strategist &amp; Consultant<br>
 				</h1>
 				<h2 class="mg-md text-lg-center">
-					Thursday 15th February 2024 17:00-18:00 – Spark Building TS202.
+					Thursday 1st February 2024 17:00-18:00 – Spark Building TS202.
 				</h2>
 			</div>
 		</div>
@@ -116,11 +116,11 @@
 			<div class="col text-md-left text-center">
 				<div class="card">
 					<div class="card-header">
-						<img src="img/lazyload-ph.png" data-src="img/nick_h.jpeg" class="img-fluid mx-auto d-block lazyload" alt="Luke" />
+						<img src="img/lazyload-ph.png" data-src="img/ross_chapman.jpeg" class="img-fluid mx-auto d-block lazyload" alt="Luke" />
 					</div>
 					<div class="card-body">
 						<p class="p-102-style text-left">
-							<a href="http://www.linkedin.com/in/nickthorne/">Nick</a> is <a href="http://www.rockstonedata.co.uk/">Director at Rockstone Data Ltd</a>, a company that provides cloud native app development and business consultancy services for various clients and sectors. He has over 14 years of experience in software development and project management, as well as an MSc in Renewable Energy Systems Technology, and multiple patents and publications in the field of digital technology.<br><br>He specialises in delivering successful projects using Python, Docker, Django, Plotly Dash, postgres, ClickhouseDB, GoLang, GitHub, and AWS, as well as native apps for Android and iOS. Some of Nick&rsquo;s recent achievements include developing and maintaining a remote condition monitoring system for a regional rail operator, a data pipeline for a healthcare startup, and a video WebRTC app for a GP education platform. He has also contributed to a new open-source release for a non-profit organization that uses mobile network data for humanitarian purposes. He enjoys working with cutting-edge technologies, solving complex problems, and creating innovative solutions that make a positive impact. <br><br><a href="http://www.linkedin.com/in/nickthorne/">www.linkedin.com/in/nickthorne/</a><br><a href="http://www.rockstonedata.co.uk/">www.rockstonedata.co.uk/</a><br><br><br><br>
+							Regarded as one of the foremost Design Sprint facilitators in the World, <a href="https://rosschapman.com/">Ross</a> has run 200+ Design Sprints, trained by <a href="https://www.linkedin.com/in/jake-knapp/">Jake Knapp</a> and is a contributor to the Official Remote Design Sprint guide.<br><br>Ross has helped 200+ teams design world-class digital products using design sprint frameworks, rapid prototyping and data-driven decision making through user research and stakeholder workshops. <br><br>From designing MVPs for start-ups to undertaking high-risk design projects with multiple teams in large multinational organisations; I add certainty to uncertain design programmes. <br><br> • helped multiple clients get from idea to MVP within a few short weeks<br> • delivered SaaS projects within a fraction of the usual time and budget<br> • had more that 15 years experience delivering 200+ project with clients such as Google, NatWest and Land Rover<br> • advocated for user research to aid decision making in product delivery teams<br> • consistently delivered outcomes in the most practical way possible<br><br><br><a href="https://rosschapman.com/">rosschapman.com/</a><br><a href="https://www.linkedin.com/in/rosspchapman/">www.linkedin.com/in/rosspchapman/</a><br><br><br>
 						</p>
 					</div>
 				</div>
