--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?26">
-	<link rel="stylesheet" type="text/css" href="style.css?5978">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?7465">
+	<link rel="stylesheet" type="text/css" href="style.css?2185">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,300&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <title>Home</title>
@@ -31,7 +31,7 @@
 <div class="page-container">
     
 <!-- bloc-0 -->
-<div class="bloc none l-bloc " id="bloc-0">
+<div class="bloc none l-bloc" id="bloc-0">
 	<div class="container bloc-sm bloc-no-padding-lg">
 		<div class="row">
 			<div class="col">
@@ -43,74 +43,30 @@
 								<span class="navbar-toggler-icon"></span>
 							</button>
 							<div class="collapse navbar-collapse navbar-32798">
-								<ul class="site-navigation nav navbar-nav ml-auto">
+								<ul class="site-navigation nav navbar-nav ml-auto ">
 									<li class="nav-item">
-										<a href="index.html" class="nav-link">Home</a>
+										<a href="5th-oct-2023.html" class="nav-link">5th Oct 2023</a>
 									</li>
 									<li class="nav-item">
-										<a href="about.html" class="nav-link">About</a>
+										<a href="19th-oct-2023.html" class="nav-link">19th Oct 2023</a>
 									</li>
 									<li class="nav-item">
-										<div class="dropdown btn-dropdown">
-											<a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false">Events</a>
-											<ul class="dropdown-menu" role="menu">
-												<li class="nav-item">
-													<a href="5th-oct-2023.html" class="nav-link">5th Oct 2023</a>
-												</li>
-												<li class="nav-item">
-													<a href="19th-oct-2023.html" class="nav-link">19th Oct 2023</a>
-												</li>
-												<li class="nav-item">
-													<a href="2nd-nov-2023.html" class="nav-link">2nd Nov 2023</a>
-												</li>
-												<li class="nav-item">
-													<a href="16th-nov-2023.html" class="nav-link">16th Nov 2023</a>
-												</li>
-												<li class="nav-item">
-													<a href="30th-nov-2023.html" class="nav-link">30th Nov 2023</a>
-												</li>
-												<li class="nav-item">
-													<a href="7th-dec-2023.html" class="nav-link">7th Dec 2023</a>
-												</li>
-												<li class="nav-item">
-													<a href="index.html" class="nav-link">1st Feb 2024</a>
-												</li>
-												<li class="nav-item">
-													<a href="1st-feb-202.html" class="nav-link">15th Feb 2024</a>
-												</li>
-											</ul>
-										</div>
+										<a href="2nd-nov-2023.html" class="nav-link">2nd Nov 2023</a>
 									</li>
 									<li class="nav-item">
-										<div class="dropdown btn-dropdown">
-											<a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false">Archive</a>
-											<ul class="dropdown-menu" role="menu">
-												<li class="nav-item">
-													<a href="2022-23.html" class="nav-link">2022-23</a>
-												</li>
-												<li class="nav-item">
-													<a href="spring-2022.html" class="nav-link">Spring 2022</a>
-												</li>
-												<li class="nav-item">
-													<a href="spring-2020.html" class="nav-link">Spring 2020</a>
-												</li>
-												<li class="nav-item">
-													<a href="spring-2019.html" class="nav-link">Spring 2019</a>
-												</li>
-												<li class="nav-item">
-													<a href="spring-2018.html" class="nav-link">Spring 2018</a>
-												</li>
-												<li class="nav-item">
-													<a href="spring-2017.html" class="nav-link">Spring 2017</a>
-												</li>
-											</ul>
-										</div>
+										<a href="16th-nov-2023.html" class="nav-link">16th Nov 2023</a>
 									</li>
 									<li class="nav-item">
-										<a href="podcast.html" class="nav-link">Podcast</a>
+										<a href="30th-nov-2023.html" class="nav-link">30th Nov 2023</a>
 									</li>
 									<li class="nav-item">
-										<a href="contact.html" class="nav-link">Contact</a>
+										<a href="7th-dec-2023.html" class="nav-link">7th Dec 2023</a>
+									</li>
+									<li class="nav-item">
+										<a href="1st-feb-2024.html" class="nav-link a-btn">1st Feb 2024</a>
+									</li>
+									<li class="nav-item">
+										<a href="15th-feb-2024.html" class="nav-link a-btn">15th Feb 2024</a>
 									</li>
 								</ul>
 							</div>
@@ -217,7 +173,7 @@
 					<div class="card-body">
 						<p class="text-lg-center text-center p-1-style">
 							<strong>Ross Chapman</strong><br>Product Strategist &amp; Consultant<br><strong>1/2/2024&nbsp;</strong><br>
-						</p><a href="1st-feb-202.html" class="btn btn-block btn-ferrari-red">More Details</a>
+						</p><a href="1st-feb-2024.html" class="btn btn-block btn-ferrari-red">More Details</a>
 					</div>
 				</div>
 			</div>
@@ -288,9 +244,9 @@
 
 
 <!-- Additional JS -->
-<script src="./js/jquery.min.js?4972"></script>
-<script src="./js/bootstrap.bundle.min.js?1323"></script>
-<script src="./js/blocs.min.js?7385"></script>
+<script src="./js/jquery.min.js?3613"></script>
+<script src="./js/bootstrap.bundle.min.js?508"></script>
+<script src="./js/blocs.min.js?1565"></script>
 <script src="./js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
 
